# ocr_app

./: .gitignore  =15.40.5  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
ocr_app/: __init__.py  api.py  hooks.py
ocr_app/ocr_app/: __init__.py
ocr_app/public/js/: Purchase_receipt.js
